8937_32go: Added access permissions for wlan
Change-Id: Ibe3b72af11c4b82069ab66ef3abfc476e82b5569

--- a/init.target.rc
+++ b/init.target.rc
@@ -176,6 +176,9 @@ on boot
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
 
+# access permission for wlan
+    chown system system /mnt/vendor/persist/WCNSS_qcom_wlan_nv.bin
+
 #USB controller configuration
     setprop vendor.usb.rndis.func.name "rndis"
     setprop vendor.usb.rmnet.func.name "rmnet_bam"
