msm8937_32go: Start vm_bms daemon in charger mode
Vm_bms is userspace daemon used for calculating the state of charge
(SOC) for vm_bms kernel driver. Start it in the charger mode.

Change-Id: I94b32eaf24eaf7c1989be1c6b72d864102dcfbe4

--- a/init.target.rc
+++ b/init.target.rc
@@ -226,6 +226,7 @@ on charger
     start qcom-post-boot
     setprop persist.sys.usb.config mass_storage
     start hvdcp_opti
+    start vendor.vm_bms
 
 service imsstarter /vendor/bin/init.qti.ims.sh
     class main
@@ -316,6 +317,11 @@ service hvdcp_opti /system/bin/hvdcp_opti
     class main
     user root
     group root
+
+service vendor.vm_bms /vendor/bin/vm_bms
+    class main
+    user root
+    group system wakelock
 
 service mdtpd /system/vendor/bin/mdtpd
     class late_start
